# My-Projects-In-C

./: CMakeLists.txt
Linked_list/: CMakeLists.txt
Linked_list/Inc/: linked_list.h
Linked_list/Src/: linked_list.c  main.c
Linked_tree/: CMakeLists.txt
Linked_tree/Inc/: linked_list.h
Linked_tree/Src/: linked_list.c  main.c  util.c
Projects/: CMakeLists.txt
Projects/GenericType/: CMakeLists.txt
Projects/GenericType/Inc/: genericType.h
Projects/GenericType/Src/: genericType.c  main.c
Projects/LinkedList/: CMakeLists.txt
Projects/LinkedList/Inc/: linked_list.h  util.h
Projects/LinkedList/Src/: linked_list.c  main.c
Projects/Test/: CMakeLists.txt
Projects/Test/Src/: main.c
